jlamontSC-test/src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>AddUp_Household__c</fullName>
        <formula>Member_Account__r.AddUp_Household__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddUp Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Address</fullName>
                </value>
                <value>
                    <fullName>Business Address</fullName>
                </value>
                <value>
                    <fullName>Work Address</fullName>
                </value>
                <value>
                    <fullName>Alternate address</fullName>
                </value>
                <value>
                    <fullName>SCPC Contributors Only</fullName>
                </value>
                <value>
                    <fullName>Active Snowbird Address</fullName>
                </value>
                <value>
                    <fullName>Temporary Address</fullName>
                </value>
                <value>
                    <fullName>Same as organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complimentary</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Non-Gift</fullName>
                </value>
                <value>
                    <fullName>Bill Me Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Credit Card Auto Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Will consider contributions</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Entry Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Political reasons/upset</fullName>
                </value>
                <value>
                    <fullName>Quit - general</fullName>
                </value>
                <value>
                    <fullName>Removed (Reversal, Even Exchange)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <label>Chapter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Promotion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dues__c</fullName>
        <label>Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Contributing</fullName>
                </value>
                <value>
                    <fullName>Friend (no vote,no outings, used in 1980s)</fullName>
                </value>
                <value>
                    <fullName>Honorary</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Limited income</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Supporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>The IndIDs from Club</description>
        <label>Member ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Membership Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Single&apos;), 1, 2)</formula>
        <label>Number of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Memberships__c</fullName>
        <formula>1</formula>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Promotion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Memberships (Original Promo)</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reinstate_Date__c</fullName>
        <label>Reinstate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reinstate_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reinstate Promotion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Current Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Member_Account__c</columns>
        <columns>Type__c</columns>
        <columns>Level__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Chapter__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>